<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="149dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="163dp"
        android:text="Date Mate"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/EmailView"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/custum_input"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Email/Number"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName" />

    <EditText
        android:id="@+id/passwordView"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/custum_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="288dp"
        android:layout_height="56dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="168dp"
        android:background="@drawable/gradient"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordView" />

    <Button
        android:id="@+id/SignupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="69dp"
        android:backgroundTint="@color/background"
        android:text="Don't have an account? Sign Up"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/forgetbtn"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="125dp"
        android:backgroundTint="@color/background"
        android:text="Forget Password?"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordView" />


</androidx.constraintlayout.widget.ConstraintLayout>